# cudaML

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: array.cu.6C39F6B25F68B13A.idx  array.cuh.DF4A0225F381C812.idx  mat_add.cu.F623E5E362060750.idx  mat_mul.cu.DBD01CD7BDF8AD45.idx  mlp.cu.5C1190132B6318FD.idx  test_array.cu.58A9C56A5EEE4805.idx  test_mat_add.cu.5C29DFB9B2CB7B2D.idx  test_mat_mul.cu.406ADBDB702BE25E.idx  test_vec_add.cu.F9B498407254686B.idx  utils.h.196EE03347EEE3DE.idx  vec_add.cu.34ED8A2D5E13E4C0.idx
docs/: cuda-notes.md  jacobian_pt1.py  jacobian_pt2.ipynb
include/: array.cuh  memory.cuh  tensorimpl.cuh  utils.h
include/math/: gemm_configs.cuh  matmul.cuh
src/: CMakeLists.txt  array.cu  cutlass_2.x_gemm.cu  cutlass_test.cu  main.cu  mlp.cu  utils.h
src/cublas/: mat_mul.cu  mlp.cu  sum.cu  vec_add.cu
src/math/: add.cu  linear.cu  mat_add.cu  mat_mul.cu  sum.cu  vec_add.cu
tests/: main.cu  test_array.cu  test_mems.cu  test_stream.cu
tests/cublas/: test_add.cu  test_auto.cu  test_linear.cu  test_mat_mul.cu  test_stream.cu  test_sum.cu
tests/math/: test_auto.cu  test_linear.cu  test_mat_add.cu  test_mat_mul.cu  test_mat_mul.h  test_vec_add.cu
